--- a/index.html
+++ b/index.html
@@ -5,21 +5,31 @@
   <title>Document</title>
 </head>
 <body>
-
-    <div class="example-1">
-    <img src="./Ugmonk.png" alt="">
-    <img src="./Frame (1).png" alt="">
+  <div class="topbar">
+    <div class="logo"><img src="./Ugmonk.png" alt="...">
+      <img src="./Frame (1).png" alt="...">
+    </div>
+    <nav>
+      <ul>
+        <li><a href="#">Men</a></li>
+        <li><a href="#">Women</a></li>
+        <li><a href="#">Objects</a></li>
+        <li><a href="#">Analog</a></li>
+      </ul>
+    </nav>
+    <div class="box">
+      <nav>
+        <ul>
+          <li><a href="#">Journal</a></li>
+          <div class="defis"></div>
+          <li><a href="#">Search</a></li>
+          <li><a href="#">Login</a></li>
+          <div class="defis"></div>
+          <li><a href="#"><img src="./Frame (3).png" alt=""></a></li>
+        </ul>
+        <div class="search">
+          <div></div>
+        </div>
+      </nav>
+    </div>
   </div>
- <header class="row">
-  <div class="col-2">
-    <ul>
-  <nav>men</nav>
-  <nav>women</nav>
-  <nav>object</nav>
-  <nav>Anolog</nav>
-  </ul>
-</header>
-</div>
- </div>
-</body>
-</html>
