--- a/index.html
+++ b/index.html
@@ -33,3 +33,14 @@
       </nav>
     </div>
   </div>
+  <div class="header">
+   <img src="./Rectangle (42).png" alt="">
+   <div class="body">
+    <div class="row">
+   
+   
+   <header>Analog: The Simplest Productivity System</header>
+   <header>Shop now →</header>
+   </div>
+   </div>
+  </div>
