--- a/index.html
+++ b/index.html
@@ -33,14 +33,43 @@
       </nav>
     </div>
   </div>
-  <div class="header">
-   <img src="./Rectangle (42).png" alt="">
-   <div class="body">
-    <div class="row">
-   
-   
-   <header>Analog: The Simplest Productivity System</header>
-   <header>Shop now →</header>
-   </div>
-   </div>
-  </div>
+  <div class="navbar">
+    <img src="./Rectangle (42).png"  alt=" "> 
+    <div> 
+      <header> Anolog:The  simplestAnalog: The Simplest Productivity System</header>
+      <p> shop now</p>  
+    </div>
+    </div>
+     <div class="podo">
+      <h2>New arrivals</h2>
+      <p>anolog</p>
+      <p>final stock</p>
+      <p>best sellers</p>
+      <p>closing</p>
+      <p>hobject</p>
+    </div>
+    <div class="body">
+      <div class="row">
+        <div class="card col-3"><img src="./Rectangle (43).png"  alt=" " class="card-image">Analog Starter Kit <header>(Walnut)$103.00</header></div>
+        <div class="card col-3"><img src="./Rectangle (44).png"   alt="" class="card-image">Analog Cards<header>(3-Pack)$39.00</header></div>
+        <div class="card col-3"><img src="./Rectangle (46).png" alt="" class="card-image">The Analog Complete Set<header>$137.00</header>.</div>
+        <div class="card col-3"><img src="./Rectangle (47).png" alt="" class="card-image">Pen Tray<header>$38.00</header>.</div>
+        <div class="card col-4"><img src="./Rectangle (48).png" alt="" class="card-image">Pen Tray<header>$38.00</header>.</div>
+        <div class="card col-3"><img src="./Rectangle (49).png" alt="" class="card-image">Pen Tray<header>$38.00</header>.</div>
+        <div class="card col-3"><img src="./Rectangle (50).png" alt="" class="card-image">Pen Tray<header>$38.00</header>.</div>
+        <div class="card col-3"><img src="./Rectangle (51).png" alt="" class="card-image">Pen Tray<header>$38.00</header>.</div>
+        <div class="card col-3"><img src="./Rectangle (52).png" alt="" class="card-image">HMM Ballpoint Pen<header>$35.00</header></div>
+        <div class="card col-3"><img src="./Rectangle (53).png" alt="" class="card-image">Mist<header>$36.00</header></div>
+        <div class="card col-3"><img src="./Rectangle (54).png" alt="" class="card-image">Analog Travel Case<header>$34.00</header></div>
+        <div class="card col-3"><img src="/Rectangle (55).png" alt="" class="card-image">HMM Scissors<header>$45.00</header></div>
+        <div class="card col-3"><img src="./Rectangle (56).png" alt="" class="card-image">Leather Desk Pad XL<header>$265.00</header></div>
+        <div class="card col-3"><img src="./Rectangle (57).png" alt="" class="card-image">Premium Leather Mousepad XL<header>$52.00</header></div>
+        <div class="card col-3"><img src="./Rectangle (59).png" alt="" class="card-image">Discbound Heirloom Journal Bundle<header>$162.00</header></div>
+        <div class="card col-3"><img src="./Rectangle (59).png" alt="" class="card-image">Chunky Knit Beanie<header>$30.00</header></div>
+        <div class="card col-3"><img src="./Rectangle (60).png" alt="" class="card-image">Chunky Knit Beanie<header>$30.00</header></div>
+        <div class="card col-3"><img src="./Rectangle (61).png" alt="" class="card-image">Men's Essential Tee<header>$96.00</header></div>
+        <div class="card col-3"><img src="./Rectangle (62).png" alt="" class="card-image">Craighill Cal Bookend<header>$120.00</header></div>
+        <div class="card col-3"><img src="./Rectangle (63).png" alt="" class="card-image">Voyage<header>Voyage</header></div>
+       
+      </div>
+    </div>
