--- a/index.html
+++ b/index.html
@@ -77,5 +77,8 @@
     <div class="header">
       <header>Shop New Arrivals</header>
      </div>
+     <div class="container">
+    <header>Analog — The simplest productivity system</header>
+     </div>
      
     
