--- a/index.html
+++ b/index.html
@@ -93,8 +93,11 @@
     
   <div class="container">
 <img src="./img/Rectangle (68).png"  alt="">
-Shop Mens →
-<div class="diary">
+<div>shop women</div>
 <img src="./img/Rectangle (69).png" alt="">
-Shop Womens →
+<div>shop mens</div>
+</div>
+
+<div class="diary">
+<img src="./img/Rectangle (71).png" alt="">
   </div>
