--- a/index.html
+++ b/index.html
@@ -100,4 +100,21 @@
 
 <div class="diary">
 <img src="./img/Rectangle (71).png" alt="">
+ <img src="./img/Rectangle (72).png" alt="">
   </div>
+  <div class="bonagua">
+    <header>A design studio in Downingtown, PA, creating and curating products that combine form & function</header>
+    <p>Read Our Story →</p>
+  </div>
+</div>
+ 
+<div class="form">
+ <img src="./img/Stay in the loop.png" alt="">
+
+  <img src="./img/Be the first to know when new products drop and get behind-the-scenes content straight from Ugmonk’s founder..png" alt="">
+  <img src="./img/Frame (7).png" alt="">
+</div>
+
+<div class="cool">
+  <img src="./img/Frame (8).png" alt="">
+</div>
