--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
 
 <div class="diary">
 <img src="./img/Rectangle (71).png" alt="">
+shop
  <img src="./img/Rectangle (72).png" alt="">
   </div>
   <div class="bonagua">
@@ -112,7 +113,7 @@
  <img src="./img/Stay in the loop.png" alt="">
 
   <img src="./img/Be the first to know when new products drop and get behind-the-scenes content straight from Ugmonk’s founder..png" alt="">
-  <img src="./img/Frame (7).png" alt="">
+  <img src="./img/Frame (9).png" alt="">
 </div>
 
 <div class="cool">
