rock n roll alive history

--- a/index.html
+++ b/index.html
@@ -117,5 +117,11 @@ shop
 </div>
 
 <div class="cool">
-  <img src="./img/Frame (8).png" alt="">
+  <h3>Customer Service</h3>
+  <h3>Help / FAQ</h3>
+  <h3>Returns & Exchanges</h3>
+  <h3>Sizing</h3>
+  <h3>Gift Cards</h3>
+  <h3>Gift Cards</h3>
+  <h3>Contact Us</h3>
 </div>
