The cat is under the umbrella

--- a/index.html
+++ b/index.html
@@ -125,3 +125,11 @@ shop
   <h3>Gift Cards</h3>
   <h3>Contact Us</h3>
 </div>
+<div class="hatber">
+  <h3>About</h3>
+ <h3>Our Story</h3>
+ <h3>Shop</h3>
+ <h3>Journal</h3>
+ <h3>About Our Tees</h3>
+ <h3>Reviews</h3>
+</div>
