--- a/index.html
+++ b/index.html
@@ -134,5 +134,5 @@ shop
  <h3>Reviews</h3>
 </div>
 <div class="added">
-  <img src="./img/" alt="">
+  <img src="./img/Frame (13).png" alt="">
 </div>
