--- a/index.html
+++ b/index.html
@@ -77,12 +77,18 @@
     <div class="header">
       <header>Shop New Arrivals</header>
      </div>
+   
+       </div>
      <div class="blog">
     <img src="./img/Frame (4).png" alt="">
-    <img src="./img/Rectangle (58).png"alt="">
+
     
      </div>
-  <div class="city">
+ 
+     <div class="message">
+      <img src="./img/Rectangle (58).png" alt="">
+     
+    <div class="city">
     <img src="./img/Frame (5).png" alt="">
  <img src="./img/Rectangle (66).png"   alt="">
 
