green energy nitro

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
  
      <div class="message">
       <img src="./img/Rectangle (58).png" alt="">
-     
+     </div>
     <div class="city">
     <img src="./img/Frame (5).png" alt="">
  <img src="./img/Rectangle (66).png"   alt="">
