--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <div class="header">
       <header>Shop New Arrivals</header>
      </div>
-   
+     <img src="./img/Rectangle (58).png" alt="" class="img-top">
        </div>
      <div class="blog">
     <img src="./img/Frame (4).png" alt="">
@@ -85,9 +85,6 @@
     
      </div>
  
-     <div class="message">
-      <img src="./img/Rectangle (58).png" alt="">
-     </div>
     <div class="city">
     <img src="./img/Frame (5).png" alt="">
  <img src="./img/Rectangle (66).png"   alt="">
