--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
           <div class="defis"></div>
           <li><a href="#"><img src="/img/Frame (3).png" alt=""></a></li>
         </ul>
+        </nav>
+        </div>
         <div class="search">
           <div></div>
         </div>
@@ -49,7 +51,7 @@
       <p>hobject</p>
     </div>
     <div class="body">
-      <div class="row">
+      <div class="row"> 
       <div class="card col-3"><img src="./img/Rectangle (43).png" alt="" class="card-image"><div>Analog Starter Kit (Walnut)$103.00</div></div>
         <div class="card col-3"><img src="./img/Rectangle (44).png"alt="" class="card-image"><div>Analog Cards(3-Pack)$39.00</div></div>
         <div class="card col-3"><img src="./img/Rectangle (46).png" alt="" class="card-image"><div>The Analog Complete Set$137.00</div></div>
@@ -76,11 +78,14 @@
     </div>
     <div class="header">
       <header>Shop New Arrivals</header>
-     </div>
-     <img src="./img/Rectangle (58).png" alt="" class="img-top">
+      </div>
+     
        </div>
      <div class="blog">
     <img src="./img/Frame (4).png" alt="">
+    <div>
+      <img src="./img/Rectangle (58).png" alt="" class="img-top">
+   </div>  
 
     
      </div>
@@ -139,3 +144,5 @@ shop
 <div class="added">
   <img src="./img/Frame (13).png" alt="">
 </div>
+</body>
+</html>
